--- a/PP_3_1_2_Boot_Security-master/src/main/resources/templates/edit.html
+++ b/PP_3_1_2_Boot_Security-master/src/main/resources/templates/edit.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 
-<form th:method="POST" th:action="@{/{id}(id = ${user.getId()})}" th:object="${user}">
-    <input type="hidden" name="_method" value="PATCH">
+<form th:method="PUT" th:action="@{/admin/{id}(id = ${user.getId()})}" th:object="${user}">
+<!--    <input type="hidden" name="_method" value="PATCH">-->
     <label for="name">Enter your name: </label>
     <input type="text" th:field="*{name}" id="name">
     <br><br>
@@ -20,9 +20,25 @@
     <label for="email">Enter your email: </label>
     <input type="text" th:field="*{email}" id="email">
     <br><br>
-
+    <label for="username">Enter your username: </label>
+    <input type="text" th:field="*{username}" id="username">
+    <br><br>
+    <label for="password">Enter your password: </label>
+    <input type="text" th:field="*{password}" id="password">
+    <br><br>
+    <label>Roles:
+        <input type="checkbox" name="role"
+               th:each="role : ${role}"
+               th:text="${role.name}"
+               th:value="${role.id}"
+               th:field="*{roles}"
+        />
+    </label>
+    <br>
+    <br>
+    <br>
+    <br>
     <input type="submit" value="Update!">
 </form>
-
 </body>
 </html>
