--- a/PP_3_1_2_Boot_Security-master/src/main/resources/templates/allUsers.html
+++ b/PP_3_1_2_Boot_Security-master/src/main/resources/templates/allUsers.html
@@ -15,21 +15,22 @@
         <th>Surname</th>
         <th>Age</th>
         <th>Email</th>
+        <th>Roles</th>
         <th>Operations</th>
     </tr>
     <tr th:each="user : ${allUsers}">
         <td th:text="${user.getId()}"></td>
-        <td th:text="${user.getUsername()}"></td>
+        <td th:text="${user.getName()}"></td>
         <td th:text="${user.getSurname()}"></td>
         <td th:text="${user.getAge()}"></td>
         <td th:text="${user.getEmail()}"></td>
+        <td th:text="${user.getRoles()}"></td>
         <td>
-            <a th:href="@{/edit/{id}(id=${user.getId()})}">
+            <a th:href="@{/admin/edit/{id}(id=${user.getId()})}">
             <button>Edit</button>
             </a>
-            <form th:method="DELETE" th:action="@{/{id}(id=${user.getId()})}" style="display: inline;">
+            <form th:method="DELETE" th:action="@{/admin/{id}(id=${user.getId()})}">
                 <button>Delete</button>
-                <input type="submit" value="Delete"/>
             </form>
         </td>
     </tr>
